--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "Random Tab Picker",
-    "description": "Indecisive on what to watch/buy/do? Open them in different tabs and let this extension pick a random one for you.",
-    "version": "2.0.1",
+    "description": "Indecisive about what to watch/buy/do? Open them in different tabs and let this extension pick a random one (or more) for you.",
+    "version": "2.1",
     "action": {
       "default_popup": "index.html"
     },
